# fingertip-design-framework

./: .gitignore  AGENTS.md  FEM-VALIDATION-DEBUG-LOG.md  Hyperelastic-Contact-Validation.md  Mechanical-Deformation-Transfer-Map.md  README.md  Scientific-Figure-Framework.md  pyproject.toml
analysis/: __init__.py  geometry_sanity_check.py  phase4_codtm_visualization.py  phase4_kratos_smoke_test.py  phase4_no_void_baseline.py  phase4_right_side_audit.py  phase4_search_crosspoint_audit.py
docs/: ARCHITECTURE.md  COMMANDS.md
examples/: displacement_vector_atlas.yaml  transfer_map_comparison.yaml
fem/: __init__.py  contact.py  crosspoint_multiplier_treatment.py  indentation.py  indentation_analysis.py  indentation_postprocess.py  indenter_fixture.py  internal_contact_configuration.py  kratos_adapter.py  kratos_settings.py  mechanical_transfer_map.py  mesh_types.py  mesh_visualize.py  no_void_baseline.py  observables.py  results.py  right_side_audit.py  search_crosspoint_audit.py
mesh/: __init__.py  fingertip.py  indenter.py  validation.py
model/: __init__.py  fingertip_model.py  fingertip_parameters.py  visualize.py
tests/: __init__.py  conftest.py  test_codtm_visualization.py  test_crosspoint_multiplier_treatment.py  test_fingertip_parameters.py  test_indentation_postprocess.py  test_indenter_fixture.py  test_mechanical_transfer_map.py  test_phase4_indentation.py  test_scientific_figure_framework.py  test_search_crosspoint_audit.py
validation/: README.md  __init__.py
visualization/: __init__.py  __main__.py  data.py  export.py  framework.py  indentation.py  (+4 more)
(+89 files in other folders)
